  so that plugins can access it.
- $ai_v{temp}{pvp} moved to $pvp because the former seems to get erroneously
  cleared sometimes.
- New Actor#snipable method; boolean whether you have snipable LOS to the
  actor.
- "Player Connected" did not trigger 'player' plugin call.
- Store $char->{attack_delay}. You attack once every
  $char->{attack_delay}/500 seconds.

Credits:
- doenet: chatLangCode bugfixes.
- isieo: attackComboSlot fixes/improvements.
- piroJOKE: new emotions, new fields.
- hakore: commanddescriptions.txt, avoidGM_ignore/deltaHp fix,
  standpoint bug, equipAuto bug, storage desc command
- illusionist: fix for force-aggressive monsters not being dropped when no LOS
- clovanzo: Louyang portals
- h4rry84: Auto Berserk/Preserve status support.
- illusionist: Follow master through warp portal.

==================
### 1.6.3
==================

New features:
- Support for baby classes! Kore will now be able to identify these
  classes correctly.
- Storage kafra password. See storageAuto_password below.
- Ability to evade Freya's anti-bot system.
- Support for eAthena servers using sakexe628. Use serverType 5 for these.

Bug fixes:
- Vending zeny limit is no longer limited to 10 million.

New config options:
- storageAuto_password (number)
  If your server is using a storage password, put the password here.
  You must also set storageEncryptKey!

- storageEncryptKey (key)
  Put your server's encryption key here. For mRO, it is:
  0x050B6F79, 0x0202C179, 0x00E20120, 0x04FA43E3, 0x0179B6C8, 0x05973DF2, 0x07D8D6B, 0x08CB9ED9

  The key may change in the future.

Credits:
- Harry: Perl implementation of the Crypton encyrption algorithm.
- dorky, BoNeS, piroJOKE: help in serverType 5 support


==================
### 1.6.2
==================

*** INCOMPATIBLE CHANGES ***:
- Items named e.g. "Unknown 1234" are now called "Unknown #1234" so that
  you can use their name in items_control.txt.
- The syntax for chat room commands has been changed. See below.